# clusterium

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  INSTALL.md  Makefile  README.md  README.rst  USAGE.md  cluster_dp.py  clusterium.code-workspace  defaults.mk  pyproject.toml  run_batch_test.sh  run_clustering.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
clusx/: __init__.py  __main__.py  cli.py  errors.py  evaluation.py  logging.py  utils.py  version.py  visualization.py
clusx/clustering/: __init__.py  cache.py  models.py  utils.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  license.rst  maintainers.rst  methodological_framework.rst  usage.rst
qa_dataset_clustering/: __init__.py  __main__.py  cli.py
qa_dataset_clustering/clustering/: __init__.py  cache.py  models.py  utils.py
qadst/: __init__.py  __main__.py  base.py  benchmarker.py  cli.py  clusterer.py  embeddings.py  evaluation.py  filters.py  testing.py  utils.py  version.py  visualization.py
qadst/clustering/: models.py  utils.py
qadst/reporters/: __init__.py  base.py  console.py  csv.py  registry.py
tests/: conftest.py  test_base_clusterer.py  test_base_utils.py  test_benchmarker.py  test_cli.py  test_clusterer.py  test_deterministic_hash.py  test_embeddings.py  test_evaluation.py  test_filter_questions.py  test_hdbscan_clusterer.py  test_main.py  test_reporters.py  test_utils.py  test_version.py  test_visualization.py
tests/clustering/: test_cache.py  test_models.py  test_models_integration.py  test_models_with_fixtures.py  test_utils.py
tests/data/: small-200d.txt  small-50-random.txt  small-50.txt  small.txt
tests/integration/clustering/: test_integration_models.py
tests/load/: profile-1.txt  profile-2.txt  profile-3.txt  profile-4.txt
